// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel basic rendering render basic content 1`] = `
<div>
  <div
    class="c-slideout-container"
  >
    <div
      class="c-slideout c-slideout-absolute c-slideout-push c-slideout-end"
    >
      <div
        aria-labelledby="clay-id-1"
        class="sidebar sidebar-light"
        id="sidepanel"
        inert=""
        tabindex="-1"
      >
        <div
          style="display: contents;"
        >
          <div
            class="sidebar-header"
          >
            <div
              class="autofit-row"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                <span
                  class="component-title"
                  id="clay-id-1"
                >
                  Title
                </span>
              </div>
              <div
                class="autofit-col"
              >
                <button
                  aria-label="Close the Title side panel."
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      href="icons.svg#times"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sidebar-body"
          >
            Body
          </div>
          <div
            class="sidebar-footer"
          >
            Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidePanel basic rendering render component with open state 1`] = `
<div>
  <div
    class="c-slideout-push-end c-slideout-container"
  >
    <div
      class="c-slideout c-slideout-absolute c-slideout-push c-slideout-end"
    >
      <div
        aria-labelledby="clay-id-2"
        class="sidebar sidebar-light c-slideout-show"
        id="sidepanel"
        tabindex="-1"
      >
        <div
          style="display: contents;"
        >
          <span
            data-focus-scope-start="true"
          />
          <div
            class="sidebar-header"
          >
            <div
              class="autofit-row"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                <span
                  class="component-title"
                  id="clay-id-2"
                >
                  Title
                </span>
              </div>
              <div
                class="autofit-col"
              >
                <button
                  aria-label="Close the Title side panel."
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      href="icons.svg#times"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sidebar-body"
          >
            Body
          </div>
          <div
            class="sidebar-footer"
          >
            Footer
          </div>
          <span
            data-focus-scope-end="true"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidePanel basic rendering render with custom aria-label 1`] = `
<div>
  <div
    class="c-slideout-container"
  >
    <div
      class="c-slideout c-slideout-absolute c-slideout-push c-slideout-end"
    >
      <div
        aria-label="Custom Title"
        class="sidebar sidebar-light"
        id="sidepanel"
        inert=""
        tabindex="-1"
      >
        <div
          style="display: contents;"
        >
          <div
            class="sidebar-header"
          >
            <div
              class="autofit-row"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                <span
                  class="component-title"
                  id="clay-id-3"
                >
                  Title
                </span>
              </div>
              <div
                class="autofit-col"
              >
                <button
                  aria-label="Close the Title side panel."
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      href="icons.svg#times"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sidebar-body"
          >
            Body
          </div>
          <div
            class="sidebar-footer"
          >
            Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidePanel basic rendering render with custom width 1`] = `
<div>
  <div
    class="c-slideout-container"
  >
    <div
      class="c-slideout c-slideout-absolute c-slideout-push c-slideout-end"
    >
      <div
        aria-labelledby="clay-id-4"
        class="sidebar sidebar-light"
        id="sidepanel"
        inert=""
        style="width: 500px;"
        tabindex="-1"
      >
        <div
          style="display: contents;"
        >
          <div
            class="sidebar-header"
          >
            <div
              class="autofit-row"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                <span
                  class="component-title"
                  id="clay-id-4"
                >
                  Title
                </span>
              </div>
              <div
                class="autofit-col"
              >
                <button
                  aria-label="Close the Title side panel."
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      href="icons.svg#times"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sidebar-body"
          >
            Body
          </div>
          <div
            class="sidebar-footer"
          >
            Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidePanel basic rendering render with fluid width 1`] = `
<div>
  <div
    class="c-slideout-container"
  >
    <div
      class="c-slideout c-slideout-absolute c-slideout-push c-slideout-end c-slideout-fluid"
    >
      <div
        aria-labelledby="clay-id-5"
        class="sidebar sidebar-light"
        id="sidepanel"
        inert=""
        tabindex="-1"
      >
        <div
          style="display: contents;"
        >
          <div
            class="sidebar-header"
          >
            <div
              class="autofit-row"
            >
              <div
                class="autofit-col autofit-col-expand"
              >
                <span
                  class="component-title"
                  id="clay-id-5"
                >
                  Title
                </span>
              </div>
              <div
                class="autofit-col"
              >
                <button
                  aria-label="Close the Title side panel."
                  class="close"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times"
                    role="presentation"
                  >
                    <use
                      href="icons.svg#times"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sidebar-body"
          >
            Body
          </div>
          <div
            class="sidebar-footer"
          >
            Footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
